layout issues

--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -594,6 +594,10 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -634,6 +638,10 @@ video {
   grid-row: span 2 / span 2;
 }
 
+.row-span-5 {
+  grid-row: span 5 / span 5;
+}
+
 .row-start-1 {
   grid-row-start: 1;
 }
@@ -648,6 +656,10 @@ video {
 
 .row-end-2 {
   grid-row-end: 2;
+}
+
+.row-end-7 {
+  grid-row-end: 7;
 }
 
 .mx-auto {
@@ -785,6 +797,14 @@ video {
   height: 170px;
 }
 
+.h-\[2000px\] {
+  height: 2000px;
+}
+
+.h-\[3000px\] {
+  height: 3000px;
+}
+
 .min-h-\[300px\] {
   min-height: 300px;
 }
@@ -811,8 +831,24 @@ video {
   width: 50%;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .max-w-sm {
   max-width: 24rem;
+}
+
+.max-w-5xl {
+  max-width: 64rem;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
+}
+
+.max-w-6xl {
+  max-width: 72rem;
 }
 
 .flex-row {
@@ -821,6 +857,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-x-5 {
@@ -834,6 +874,21 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-b-3xl {
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+
+.rounded-t-3xl {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+
+.rounded-b-xl {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
 }
 
 .bg-gray-700 {
@@ -871,6 +926,11 @@ video {
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -879,8 +939,59 @@ video {
   padding: 4rem;
 }
 
+.p-\[60px\] {
+  padding: 60px;
+}
+
+.px-\[60px\] {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.py-\[60px\] {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.px-\[90px\] {
+  padding-left: 90px;
+  padding-right: 90px;
+}
+
+.px-\[120px\] {
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+.pb-\[60px\] {
+  padding-bottom: 60px;
+}
+
+.pb-\[40px\] {
+  padding-bottom: 40px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-\[72px\] {
@@ -905,6 +1016,10 @@ video {
 
 .text-\[30px\] {
   font-size: 30px;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
 }
 
 .font-bold {
